Refactored the SonarQube fix