@@ -1,19 +1,6 @@
 package gov.ca.cwds.rest.api.domain.investigation.contact;
 
 import static gov.ca.cwds.data.persistence.cms.CmsPersistentObject.CMS_ID_LEN;
-import gov.ca.cwds.data.persistence.contact.DeliveredServiceEntity;
-import gov.ca.cwds.rest.api.Request;
-import gov.ca.cwds.rest.api.Response;
-import gov.ca.cwds.rest.api.domain.DomainChef;
-import gov.ca.cwds.rest.api.domain.DomainObject;
-import gov.ca.cwds.rest.api.domain.LastUpdatedBy;
-import gov.ca.cwds.rest.api.domain.PostedIndividualDeliveredService;
-import gov.ca.cwds.rest.api.domain.ReportingDomain;
-import gov.ca.cwds.rest.api.domain.SystemCodeCategoryId;
-import gov.ca.cwds.rest.validation.ValidSystemCodeId;
-import io.dropwizard.jackson.JsonSnakeCase;
-import io.dropwizard.validation.OneOf;
-import io.swagger.annotations.ApiModelProperty;
 
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -31,6 +18,20 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonFormat;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+import gov.ca.cwds.data.persistence.contact.DeliveredServiceEntity;
+import gov.ca.cwds.rest.api.Request;
+import gov.ca.cwds.rest.api.Response;
+import gov.ca.cwds.rest.api.domain.DomainChef;
+import gov.ca.cwds.rest.api.domain.DomainObject;
+import gov.ca.cwds.rest.api.domain.LastUpdatedBy;
+import gov.ca.cwds.rest.api.domain.PostedIndividualDeliveredService;
+import gov.ca.cwds.rest.api.domain.ReportingDomain;
+import gov.ca.cwds.rest.api.domain.SystemCodeCategoryId;
+import gov.ca.cwds.rest.validation.ValidSystemCodeId;
+import io.dropwizard.jackson.JsonSnakeCase;
+import io.dropwizard.validation.OneOf;
+import io.swagger.annotations.ApiModelProperty;
 
 /**
  * {@link DomainObject} representing a Contact
@@ -80,9 +81,7 @@ public class Contact extends ReportingDomain implements Request, Response {
   @JsonProperty("purpose")
   // "service_contact" delivered service serviceContactType
   @ValidSystemCodeId(required = false, category = SystemCodeCategoryId.CONTACT_TYPE)
-  @ApiModelProperty(
-      required = false,
-      readOnly = false,
+  @ApiModelProperty(required = false, readOnly = false,
       value = "Delivered service contact type system code ID e.g)  -> 433 Conduct Client Evaluation ",
       example = "433")
   private Integer purpose;
@@ -163,6 +162,12 @@ public class Contact extends ReportingDomain implements Request, Response {
     this.people = people;
   }
 
+  /**
+   * @param persistedDeliverdService - persistedDeliverdService
+   * @param lastUpdatedBy - lastUpdatedBy
+   * @param note - note
+   * @param people - people
+   */
   public Contact(DeliveredServiceEntity persistedDeliverdService, LastUpdatedBy lastUpdatedBy,
       String note, Set<PostedIndividualDeliveredService> people) {
     super();
@@ -176,11 +181,12 @@ public class Contact extends ReportingDomain implements Request, Response {
     if (StringUtils.isNotEmpty(endDate)) {
       this.endedAt = endDate + "T" + cookTime(persistedDeliverdService.getEndTime()) + "Z";
     }
-    this.purpose = new Integer(persistedDeliverdService.getServiceContactType());
-    this.communicationMethod = new Integer(persistedDeliverdService.getCommunicationMethodType());
+    this.purpose = Integer.valueOf(persistedDeliverdService.getServiceContactType());
+    this.communicationMethod =
+        Integer.valueOf(persistedDeliverdService.getCommunicationMethodType());
     this.status = persistedDeliverdService.getStatusCode();
     this.services = null;
-    this.location = new Integer(persistedDeliverdService.getContactLocationType());
+    this.location = Integer.valueOf(persistedDeliverdService.getContactLocationType());
     this.note = note;
     this.people = people;
   }
